# beam-grpcio-slowdown-repro

./: main.py  pyproject.toml  testin.sh
